Changed the 'position' property of the '.left-column' to 'fixed' so that it stays in it's place permanently on the screen as users scroll down the page. Had to change the 'width' and 'margin-left' properties of the '.column-right' so that it leaves room on the left side of the page to reveal/show the '.'left-column'. The 'fixed' attribute means the element ignores normal document flow, which means it got covered by the other elements on the page.

--- a/homepage.css
+++ b/homepage.css
@@ -29,16 +29,20 @@ body {
 }
 
 .column-left {
-
+  position: fixed;
   width:12rem;
   height: 100vh;
   background-color: rgb(176, 176, 176);
+  transform: translateX(-100%);
+  animation: columnSlideIn 800ms ease-in-out forwards;
 }
 
 .column-right {
   position: relative;
   height: 100vh;
   width:100%;
+  width: calc(100% - 12rem); /* subtract the width of the fixed .column-left element */
+  margin-left: 12rem; /* add left margin equal to the width of the fixed .column-left element */
   background-color: #000000;
   overflow: hidden;
   color: whitesmoke;
